@@ -1,10 +1,18 @@
 Revision history for Perl module group Pod::Perldoc
-                                        Time-stamp: "2008-04-22 15:21:46 BRT"
+                                        Time-stamp: "2008-05-02 21:27:00 BRT"
 
+2008-05-02
+	* Development release 3.14_06 -- Be lenient
+	* 'perldoc intro' may find 'perlintro' page
+	  (suggested by Gisle Aas)
+	* -v (Verbosely describe) is now -D
+	* perldoc -v PerlVar
+	
 2008-04-22
         * Development release 3.14_05 -- Search perlvar
         * Applied patch to allow -A for searching perlvar.
           (after a patch by Ovid, 2008-02-26)
+          [rt.cpan.org #33624]
 	
         * [RFC] the switch name is experimental: I am open
 	  to convincing alternatives (other than -v and -V 
